# harbour-sailfin

./: CMakeLists.txt
rpm/: harbour-sailfin.changes  harbour-sailfin.yaml
sailfish/: CMakeLists.txt
sailfish/qml/: Utils.js  harbour-sailfin.qml
sailfish/qml/components/: ItemChildrenShowcase.qml  LibraryItemDelegate.qml  PlayToolbar.qml  PlaybackBar.qml  RemoteImage.qml
sailfish/qml/cover/: CollectionPage.qml
sailfish/qml/pages/: AboutPage.qml  MainPage.qml
sailfish/qml/pages/itemdetails/: MusicArtistPage.qml  SeasonPage.qml  VideoPage.qml
sailfish/src/: apiclient.cpp  apimodel.cpp  credentialmanager.cpp  harbour-sailfin.cpp  jellyfin.cpp  qobjectsettingswrapper.cpp  websocket.cpp
sailfish/src/model/: deviceprofile.cpp  playbackmanager.cpp  player.cpp
sailfish/translations/: harbour-sailfin-de.ts  harbour-sailfin-ru.ts  harbour-sailfin.ts
